--- a/ecoles.html
+++ b/ecoles.html
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
             <div class="container">
                 <!-- Logo -->
-                <a class="navbar-brand" href="index.php">
+                <a class="navbar-brand" href="index.html">
                     <img src="iut_auxerre.jpg" alt="Logo BUT RT" width="40" height="40" class="d-inline-block align-text-top">
                     BUT RT
                 </a>
