--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
         <section id="contact" class="mt-5">
             <h2 class="text-center mb-4">Contact</h2>
             <div class="text-center">
-                <p>Pour toute question ou suggestion, contactez-nous à : <a href="mailto:omar.samb@iut-dijon.u-bourgogne.fr elhadj.seck@iut-dijon.u-bourgogne.fr">contact@but-rt.fr</a></p>
+                <p>Pour toute question ou suggestion, contactez-nous à : <a href="mailto:omar.samb@iut-dijon.u-bourgogne.fr">omar.samb@iut-dijon.u-bourgogne.fr elhadj.seck@iut-dijon.u-bourgogne.fr</a></p>
                 <div class="d-flex justify-content-center">
                     <a href="https://www.facebook.com" class="btn btn-outline-primary mx-2">Facebook</a>
                     <a href="https://www.linkedin.com" class="btn btn-outline-primary mx-2">LinkedIn</a>
