--- a/temoignages.html
+++ b/temoignages.html
@@ -6,38 +6,47 @@
     <title>Témoignages</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Animation fade for the carousel */
+        .carousel-item {
+            opacity: 0;
+            transition: opacity 0.8s ease-in-out;
+        }
+        .carousel-item.active {
+            opacity: 1;
+        }
+
+        /* Fade-in animation for the section */
+        .fade-in {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: all 0.6s ease-out;
+        }
+
+        .fade-in.show {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    </style>
 </head>
 <body>
+    <!-- Header Section -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
             <div class="container">
-                <!-- Logo -->
                 <a class="navbar-brand" href="index.html">
                     <img src="iut_auxerre.jpg" alt="Logo BUT RT" width="40" height="40" class="d-inline-block align-text-top">
                     BUT RT
                 </a>
-
-                <!-- Burger Button -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
-                <!-- Navigation Links -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="ecoles.html">Écoles</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="formations.html">Formations</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="temoignages.html">Témoignages</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                        <!-- Dynamic Toggle Button for Light/Dark Mode -->
+                        <li class="nav-item"><a class="nav-link" href="ecoles.html">Écoles</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="formations.html">Formations</a></li>
+                        <li class="nav-item"><a class="nav-link" href="temoignages.html">Témoignages</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         <li class="nav-item">
                             <button id="theme-toggle" class="btn btn-outline-light">🌙 Mode sombre</button>
                         </li>
@@ -47,10 +56,11 @@
         </nav>
     </header>
 
+    <!-- Main Content -->
     <main class="container mt-5">
-        <section id="temoignages" class="mt-5">
+        <section id="temoignages" class="mt-5 fade-in">
             <h2 class="text-center mb-4">Témoignages</h2>
-            <div class="carousel slide" id="testimonialCarousel" data-bs-ride="carousel">
+            <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel" aria-label="Témoignages d'étudiants">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <blockquote class="blockquote text-center">
@@ -64,14 +74,21 @@
                             <footer class="blockquote-footer">Karim</footer>
                         </blockquote>
                     </div>
+                    <div class="carousel-item">
+                        <blockquote class="blockquote text-center">
+                            <p class="mb-4">"Une formation pratique et complète qui m'a ouvert les portes de la cybersécurité."</p>
+                            <footer class="blockquote-footer">Fatou</footer>
+                        </blockquote>
+                    </div>
                 </div>
+                <!-- Carousel Controls -->
                 <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
+                    <span class="visually-hidden">Précédent</span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
+                    <span class="visually-hidden">Suivant</span>
                 </button>
             </div>
         </section>
@@ -80,11 +97,33 @@
     <!-- Footer Section -->
     <footer class="bg-dark text-white py-4">
         <div class="container text-center">
-            <p>&copy; 2024 Réseaux et Télécommunications. SAMB-SECK.</p>
+            <p>&copy; 2024 Réseaux et Télécommunications. Tous droits réservés.</p>
         </div>
     </footer>
 
-    <script src="scripts.js"></script>
+    <!-- JavaScript -->
+    <script>
+        // Fade-in Effect on Scroll
+        document.addEventListener('DOMContentLoaded', () => {
+            const fadeElements = document.querySelectorAll('.fade-in');
+            const observer = new IntersectionObserver(entries => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('show');
+                    }
+                });
+            }, { threshold: 0.1 });
+
+            fadeElements.forEach(element => observer.observe(element));
+        });
+
+        // Theme Toggle
+        const themeToggle = document.querySelector('#theme-toggle');
+        themeToggle.addEventListener('click', () => {
+            document.body.classList.toggle('dark-mode');
+            themeToggle.textContent = document.body.classList.contains('dark-mode') ? '☀️ Mode clair' : '🌙 Mode sombre';
+        });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
