--- a/ecoles.html
+++ b/ecoles.html
@@ -10,33 +10,33 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <nav class="navbar navbar-expand-lg sticky-top" style="background: linear-gradient(to right, #343a40, #1f1f1f);">
             <div class="container">
                 <!-- Logo -->
-                <a class="navbar-brand" href="index.html">
-                    <img src="iut_auxerre.jpg" alt="Logo BUT RT" width="40" height="40" class="d-inline-block align-text-top">
-                    BUT RT
+                <a class="navbar-brand" href="index.html" style="display: flex; align-items: center; gap: 10px;">
+                    <img src="iut_auxerre.jpg" alt="Logo BUT RT" width="50" height="50" class="d-inline-block align-text-top" style="transition: transform 0.3s ease;">
+                    <span class="text-white fw-bold">BUT RT</span>
                 </a>
-
+    
                 <!-- Burger Button -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
+    
                 <!-- Navigation Links -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="ecoles.html">Écoles</a>
+                            <a class="nav-link text-white" href="ecoles.html">Écoles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="formations.html">Formations</a>
+                            <a class="nav-link text-white" href="formations.html">Parcours Général</a></li>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="temoignages.html">Témoignages</a>
+                            <a class="nav-link text-white" href="temoignages.html">Témoignages</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link text-white" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
