--- a/ecoles.html
+++ b/ecoles.html
@@ -30,7 +30,7 @@
                             <a class="nav-link text-white" href="ecoles.html">Écoles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="formations.html">Parcours Général</a></li>
+                            <a class="nav-link text-white" href="formations.html">Parcours Pro</a></li>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="temoignages.html">Témoignages</a>
