--- a/formations.html
+++ b/formations.html
@@ -29,7 +29,7 @@
                             <a class="nav-link" href="ecoles.html">Écoles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="formations.html">Formations</a>
+                            <a class="nav-link active" href="formations.html">Parcours Pro</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="temoignages.html">Témoignages</a>
