--- a/ecoles.html
+++ b/ecoles.html
@@ -207,7 +207,7 @@
                 <!-- Polytech Marseille -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 text-center">
-                        <img src="polytech_marseille.png" class="card-img-top mx-auto mt-3" alt="Logo Polytech Marseille" style="max-width: 120px;">
+                        <img src="marseille.jng" class="card-img-top mx-auto mt-3" alt="Logo Polytech Marseille" style="max-width: 120px;">
                         <div class="card-body">
                             <h5 class="card-title">Polytech Marseille</h5>
                             <p class="card-text">École d'ingénieurs généraliste avec des parcours en réseaux, informatique et télécommunications.</p>
@@ -219,7 +219,7 @@
                 <!-- EPITA Paris -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 text-center">
-                        <img src="epita.png" class="card-img-top mx-auto mt-3" alt="Logo EPITA" style="max-width: 120px;">
+                        <img src="epita.jng" class="card-img-top mx-auto mt-3" alt="Logo EPITA" style="max-width: 120px;">
                         <div class="card-body">
                             <h5 class="card-title">EPITA Paris</h5>
                             <p class="card-text">Grande école d'ingénieurs en informatique avec des spécialisations en systèmes réseaux et cybersécurité.</p>
@@ -231,7 +231,7 @@
                 <!-- Polytech Lille -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 text-center">
-                        <img src="polytech_lille.png" class="card-img-top mx-auto mt-3" alt="Logo Polytech Lille" style="max-width: 120px;">
+                        <img src="lille.jng" class="card-img-top mx-auto mt-3" alt="Logo Polytech Lille" style="max-width: 120px;">
                         <div class="card-body">
                             <h5 class="card-title">Polytech Lille</h5>
                             <p class="card-text">Formations spécialisées en ingénierie des télécommunications, systèmes embarqués et IoT.</p>
@@ -245,7 +245,7 @@
                 <!-- ENSEEIHT Toulouse -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 text-center">
-                        <img src="enseeiht.png" class="card-img-top mx-auto mt-3" alt="Logo ENSEEIHT" style="max-width: 120px;">
+                        <img src="inp.png" class="card-img-top mx-auto mt-3" alt="Logo ENSEEIHT" style="max-width: 120px;">
                         <div class="card-body">
                             <h5 class="card-title">ENSEEIHT Toulouse</h5>
                             <p class="card-text">Spécialiste des systèmes informatiques, réseaux et énergies avec des parcours innovants.</p>
@@ -257,7 +257,7 @@
                 <!-- Université Grenoble Alpes -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 text-center">
-                        <img src="uga.png" class="card-img-top mx-auto mt-3" alt="Logo Université Grenoble Alpes" style="max-width: 120px;">
+                        <img src="grenoble.png" class="card-img-top mx-auto mt-3" alt="Logo Université Grenoble Alpes" style="max-width: 120px;">
                         <div class="card-body">
                             <h5 class="card-title">Université Grenoble Alpes</h5>
                             <p class="card-text">Formations en réseaux avancés, informatique et ingénierie des télécommunications.</p>
