--- a/ecoles.html
+++ b/ecoles.html
@@ -207,7 +207,7 @@
                 <!-- Polytech Marseille -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 text-center">
-                        <img src="marseille.jng" class="card-img-top mx-auto mt-3" alt="Logo Polytech Marseille" style="max-width: 120px;">
+                        <img src="marseille.jpg" class="card-img-top mx-auto mt-3" alt="Logo Polytech Marseille" style="max-width: 120px;">
                         <div class="card-body">
                             <h5 class="card-title">Polytech Marseille</h5>
                             <p class="card-text">École d'ingénieurs généraliste avec des parcours en réseaux, informatique et télécommunications.</p>
@@ -219,7 +219,7 @@
                 <!-- EPITA Paris -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 text-center">
-                        <img src="epita.jng" class="card-img-top mx-auto mt-3" alt="Logo EPITA" style="max-width: 120px;">
+                        <img src="epita.jpg" class="card-img-top mx-auto mt-3" alt="Logo EPITA" style="max-width: 120px;">
                         <div class="card-body">
                             <h5 class="card-title">EPITA Paris</h5>
                             <p class="card-text">Grande école d'ingénieurs en informatique avec des spécialisations en systèmes réseaux et cybersécurité.</p>
@@ -231,7 +231,7 @@
                 <!-- Polytech Lille -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 text-center">
-                        <img src="lille.jng" class="card-img-top mx-auto mt-3" alt="Logo Polytech Lille" style="max-width: 120px;">
+                        <img src="lille.jpg" class="card-img-top mx-auto mt-3" alt="Logo Polytech Lille" style="max-width: 120px;">
                         <div class="card-body">
                             <h5 class="card-title">Polytech Lille</h5>
                             <p class="card-text">Formations spécialisées en ingénierie des télécommunications, systèmes embarqués et IoT.</p>
@@ -269,7 +269,7 @@
                 <!-- Sorbonne Université -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 text-center">
-                        <img src="sorbonne.png" class="card-img-top mx-auto mt-3" alt="Logo Sorbonne Université" style="max-width: 120px;">
+                        <img src="sorbone.png" class="card-img-top mx-auto mt-3" alt="Logo Sorbonne Université" style="max-width: 120px;">
                         <div class="card-body">
                             <h5 class="card-title">Sorbonne Université</h5>
                             <p class="card-text">Des formations d'excellence en réseaux, IoT et intelligence artificielle.</p>
