--- a/ecoles.html
+++ b/ecoles.html
@@ -46,9 +46,9 @@
 
     <main class="container mt-5">
         <section id="ecoles" class="mt-5">
-            <h2 class="text-center mb-4">Écoles d'ingénieurs accessibles après un BUT 2 RT</h2>
+            <h2 class="text-center mb-4">Écoles accessibles après un BUT 2 RT</h2>
             <p class="text-center mb-5">
-                Après un BUT Réseaux et Télécommunications, plusieurs grandes écoles d'ingénieurs vous ouvrent leurs portes. Découvrez leurs spécialités et opportunités.
+                Après un BUT Réseaux et Télécommunications, plusieurs grandes écoles vous ouvrent leurs portes. Découvrez leurs spécialités et opportunités.
             </p>
 
             <!-- Ligne 1 -->
