--- a/temoignages.html
+++ b/temoignages.html
@@ -72,23 +72,42 @@
             <h2 class="text-center mb-4">Témoignages</h2>
             <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel" aria-label="Témoignages d'étudiants">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <blockquote class="blockquote text-center">
-                            <p class="mb-4">"Grâce au BUT RT, j'ai intégré une grande école d'ingénieurs et je travaille maintenant chez un opérateur télécom."</p>
-                            <footer class="blockquote-footer">Amina</footer>
-                        </blockquote>
-                    </div>
-                    <div class="carousel-item">
-                        <blockquote class="blockquote text-center">
-                            <p class="mb-4">"Les certifications comme AWS et Cisco m'ont permis de décrocher un poste de consultant cloud en moins d'un an."</p>
-                            <footer class="blockquote-footer">Karim</footer>
-                        </blockquote>
-                    </div>
-                    <div class="carousel-item">
-                        <blockquote class="blockquote text-center">
-                            <p class="mb-4">"Une formation pratique et complète qui m'a ouvert les portes de la cybersécurité."</p>
-                            <footer class="blockquote-footer">Fatou</footer>
-                        </blockquote>
+                        <div class="carousel-item active">
+                            <blockquote class="blockquote text-center">
+                                <p class="mb-4">"Grâce au BUT RT, j'ai intégré une grande école d'ingénieurs et je travaille maintenant chez un opérateur télécom."</p>
+                                <footer class="blockquote-footer">Amina</footer>
+                            </blockquote>
+                        </div>
+                        <div class="carousel-item">
+                            <blockquote class="blockquote text-center">
+                                <p class="mb-4">"Les certifications comme AWS et Cisco m'ont permis de décrocher un poste de consultant cloud en moins d'un an."</p>
+                                <footer class="blockquote-footer">Karim</footer>
+                            </blockquote>
+                        </div>
+                        <div class="carousel-item">
+                            <blockquote class="blockquote text-center">
+                                <p class="mb-4">"Une formation pratique et complète qui m'a ouvert les portes de la cybersécurité."</p>
+                                <footer class="blockquote-footer">Fatou</footer>
+                            </blockquote>
+                        </div>
+                        <div class="carousel-item">
+                            <blockquote class="blockquote text-center">
+                                <p class="mb-4">"Le BUT RT m'a permis de développer des compétences en IoT et de participer à des projets innovants dans une startup technologique."</p>
+                                <footer class="blockquote-footer">Jean</footer>
+                            </blockquote>
+                        </div>
+                        <div class="carousel-item">
+                            <blockquote class="blockquote text-center">
+                                <p class="mb-4">"Les intervenants professionnels et les stages m'ont préparé à intégrer rapidement le monde du travail."</p>
+                                <footer class="blockquote-footer">Sophie</footer>
+                            </blockquote>
+                        </div>
+                        <div class="carousel-item">
+                            <blockquote class="blockquote text-center">
+                                <p class="mb-4">"Une formation complète en réseaux et télécommunications qui m'a ouvert des opportunités internationales."</p>
+                                <footer class="blockquote-footer">Ali</footer>
+                            </blockquote>
+                        </div>
                     </div>
                 </div>
                 <!-- Carousel Controls -->
